<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="light_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="message_developer">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_name1" translatable="false">Smells Like Teen Spirit</string>
    <string name="track_name2" translatable="false">Billie Jean</string>
    <string name="track_name3" translatable="false">Stayin\' Alive</string>
    <string name="track_name4" translatable="false">Whole Lotta Love</string>
    <string name="track_name5" translatable="false">Sweet Child O\'Mine</string>
    <string name="track_autor1" translatable="false">Nirvana</string>
    <string name="track_autor2" translatable="false">Michael Jackson</string>
    <string name="track_autor3" translatable="false">Bee Gees</string>
    <string name="track_autor4" translatable="false">Led Zeppelin</string>
    <string name="track_autor5" translatable="false">Guns N\' Roses</string>
    <string name="artwork_url1" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="artwork_url2" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="artwork_url3" translatable="false">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="artwork_url4" translatable="false">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="artwork_url5" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="track_time1" translatable="false">5:01</string>
    <string name="track_time2" translatable="false">4:35</string>
    <string name="track_time3" translatable="false">4:10</string>
    <string name="track_time4" translatable="false">5:33</string>
    <string name="track_time5" translatable="false">5:03</string>
</resources>