<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyNewPlaylist"
    tools:context=".settings.ui.SettingsFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryVariant"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/ys_display_medium"
                android:paddingStart="16dp"
                android:paddingTop="14dp"
                android:paddingEnd="8dp"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="?attr/colorSecondary"
                android:textSize="22sp" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:fontFamily="@font/ys_display_regular"
                    android:id="@+id/switch1"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="start"
                    android:paddingVertical="21dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="15dp"

                    android:text="@string/light_theme"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/textSize"
                    app:thumbTint="@color/switch_thumb_color"
                    app:trackTint="@color/switch_track_color"/>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/ys_display_regular"
                    style="@style/TextViewSettings"
                    android:text="@string/share_app"
                    tools:ignore="RtlSymmetry" />
                <Button
                    android:id="@+id/share"
                    style="@style/ButtonViewSettings"
                    android:contentDescription="@string/share_app"
                    app:icon="@drawable/share"
                    app:iconGravity="textEnd"
                    app:iconSize="30sp"
                    app:iconTint="?attr/colorSecondaryVariant" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/TextViewSettings"
                    android:text="@string/support"
                    tools:ignore="RtlSymmetry" />
                <Button
                    android:fontFamily="@font/ys_display_regular"
                    android:id="@+id/support"
                    style="@style/ButtonViewSettings"
                    android:contentDescription="@string/support"
                    app:icon="@drawable/support"
                    app:iconGravity="textEnd"
                    app:iconSize="30sp"
                    app:iconTint="?attr/colorSecondaryVariant" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    style="@style/TextViewSettings"
                    android:text="@string/user_agreement"
                    tools:ignore="RtlSymmetry" />
                <Button
                    android:fontFamily="@font/ys_display_regular"
                    android:id="@+id/agreement"
                    style="@style/ButtonViewSettings"
                    android:contentDescription="@string/user_agreement"
                    app:icon="@drawable/vector2"
                    app:iconGravity="textEnd"
                    app:iconSize="20sp"
                    app:iconTint="?attr/colorSecondaryVariant" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>