<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:theme="@style/Theme.MyNewPlaylist">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"

        >

        <TextView
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/search"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15sp"
                android:layout_marginVertical="7sp"
                android:layout_weight="1"
                android:padding="@dimen/padding"
                android:textAllCaps="false"
                android:text="@string/search"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="@dimen/textMainSize"
                app:cornerRadius="@dimen/cornerRadius"
                app:icon="@drawable/light_mode"
                app:iconPadding="@dimen/padding"
                app:iconGravity="textStart"
                app:iconTint="?attr/colorOnPrimaryContainer"
                />

            <Button
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/media"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15sp"
                android:layout_marginVertical="7sp"
                android:layout_weight="1"
                android:padding="@dimen/padding"
                android:textAllCaps="false"
                android:text="@string/media_library"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="@dimen/textMainSize"
                app:cornerRadius="@dimen/cornerRadius"
                app:icon="@drawable/light_mode2"
                app:iconPadding="@dimen/padding"
                app:iconGravity="textStart"
                app:iconTint="?attr/colorOnPrimaryContainer"/>

            <Button
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/settings"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="15sp"
                android:layout_marginTop="7sp"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:padding="@dimen/padding"
                android:textAllCaps="false"
                android:text="@string/settings"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="@dimen/textMainSize"
                app:cornerRadius="@dimen/cornerRadius"
                app:icon="@drawable/light_mode3"
                app:iconPadding="@dimen/padding"
                app:iconGravity="textStart"
                app:iconTint="?attr/colorOnPrimaryContainer"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>