<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:background="@android:color/transparent"
                android:paddingTop="1dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:icon="@drawable/back"
                app:iconTint="@color/black"
                app:iconSize="45sp"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"

            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="start"
                    android:paddingVertical="21dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="15dp"
                    android:shadowColor="@color/gray"
                    android:text="@string/light_theme"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    tools:ignore="RtlSymmetry" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/white"
                    android:paddingVertical="21dp"
                    android:paddingStart="16dp"
                    android:text="@string/share_app"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/share_app"
                    app:icon="@drawable/share"
                    app:iconGravity="textEnd"
                    android:background="@android:color/transparent"
                    app:iconSize="30sp"
                    app:iconTint="@color/gray" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="start"
                    android:paddingVertical="21dp"
                    android:paddingStart="16dp"
                    android:text="@string/support"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    app:iconPadding="10dp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/support"
                    app:icon="@drawable/support"
                    app:iconGravity="textEnd"
                    android:background="@android:color/transparent"
                    app:iconSize="30sp"
                    app:iconTint="@color/gray" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="start"
                    android:paddingVertical="21dp"
                    android:paddingStart="16dp"
                    android:text="@string/user_agreement"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize"
                    app:iconPadding="10dp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/user_agreement"
                    app:icon="@drawable/vector"
                    app:iconGravity="textEnd"
                    android:background="@android:color/transparent"
                    app:iconSize="20sp"
                    app:iconTint="@color/gray" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>